Index page update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <div class="logo">
                                     <a href="index.html">
                                         <!-- <img src="https://upload.wikimedia.org/wikipedia/en/0/01/Mar_Baselios_Christian_College_Logo.png" height="60px" alt=""> -->
-                                        <div class="title-logo"><p class="title-MBC">M<span class="title-B">B</span>C</p></div>
+                                        <div class="title-logo"><p class="title-MBC">M<span class="title-B">B</span>C<span style="font-size: 40px; color: white">Scholarship</span></p></div>
                                     </a>
                                 </div>
                             </div>
@@ -98,11 +98,11 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="#"> <i class="fa fa-phone"></i> +10 673 567 367</a>
+                                        <a href="tel:+917559933571"> <i class="fa fa-phone"></i> +91 75599 33571</a>
                                     </div>
-                                    <div class="d-none d-lg-block">
+                                    <!-- <div class="d-none d-lg-block">
                                         <a class="boxed-btn4" href="apply.html">Apply for a Loan</a>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="col-12">
@@ -124,9 +124,9 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-7 col-md-6">
                         <div class="slider_text">
-                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">Get Loan for your Business growth or startup</h3>
+                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">Take your life to next level</h3>
                             <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">
-                                <a href="#" class="boxed-btn3">How it Works</a>
+                                <a href="http://www.mbcpeermade.com/" target="_blank" class="boxed-btn3">Know More</a>
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                         <div class="payment_form white-bg wow fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">
                             <div class="info text-center">
                                 <h4>Login Here</h4>
-                                <p>Login with your credentials sent to your mail</p>
+                                <p>Login with credentials sent to your mail</p>
                             </div>
                             <div class="form">
                                 <div class="row">
@@ -172,7 +172,7 @@
                     <div class="section_title text-center mb-90">
                         <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s"></span>
                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">What we offer for you</h3>
-                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">We provide online instant cash loans with quick approval that suit your term</p>
+                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">We provide the best environment to learn and grow</p>
                     </div>
                 </div>
             </div>
@@ -181,22 +181,22 @@
                     <div class="single_service wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".5s">
                         <div class="service_icon_wrap text-center">
                             <div class="service_icon ">
-                                <img src="img/svg_icon/service_1.png" alt="">
+                                <img src="img/svg_icon/data.svg" height="80px" alt="">
                             </div>
                         </div>
                         <div class="info text-center">
-                            <span>Home Loan</span>
-                            <h3>$3000-$10000</h3>
+                            <span>Computer Science & Engg.</span>
+                            <!-- <h3></h3> -->
                         </div>
                         <div class="service_content">
-                            <ul>
+                            <!-- <ul>
                                 <li> Borrow - $350 over 3 months </li>
                                 <li> Interest rate - 292% pa fixed</li>
                                 <li>Total amount payable - $525.12</li>
                                 <li>Representative - 1,286% APR</li>
-                            </ul>
+                            </ul> -->
                             <div class="apply_btn">
-                                <button class="boxed-btn3" type="submit">Apply Now</button>
+                                <a href="http://www.mbcpeermade.com/Departments/Computer-Science-and-Engineering/1/Department%20Profile/3" target="_blank"><button class="boxed-btn3" type="submit">Know More</button></a>
                             </div>
                         </div>
                     </div>
@@ -205,22 +205,22 @@
                     <div class="single_service wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                         <div class="service_icon_wrap text-center">
                             <div class="service_icon ">
-                                <img src="img/svg_icon/service_2.png" alt="">
+                                <img src="img/svg_icon/gear.svg" height="80px" alt="">
                             </div>
                         </div>
                         <div class="info text-center">
-                            <span>car Loan</span>
-                            <h3>$3000-$10000</h3>
+                            <span>Mechanical Engineering</span>
+                            <!-- <h3></h3> -->
                         </div>
                         <div class="service_content">
-                            <ul>
+                            <!-- <ul>
                                 <li> Borrow - $350 over 3 months </li>
                                 <li> Interest rate - 292% pa fixed</li>
                                 <li>Total amount payable - $525.12</li>
                                 <li>Representative - 1,286% APR</li>
-                            </ul>
+                            </ul> -->
                             <div class="apply_btn">
-                                <button class="boxed-btn3" type="submit">Apply Now</button>
+                                <a href="http://www.mbcpeermade.com/Departments/Mechanical-Engineering/5/Department%20Profile/39" target="_blank"><button class="boxed-btn3" type="submit">Know More</button></a>
                             </div>
                         </div>
                     </div>
@@ -229,27 +229,103 @@
                     <div class="single_service wow fadeInRight" data-wow-duration="1.2s" data-wow-delay=".5s">
                         <div class="service_icon_wrap text-center">
                             <div class="service_icon ">
-                                <img src="img/svg_icon/service_3.png" alt="">
+                                <img src="img/svg_icon/technology.svg" height="80px" alt="">
                             </div>
                         </div>
                         <div class="info text-center">
-                            <span>Education Loan</span>
-                            <h3>$3000-$10000</h3>
+                            <span>Electronics & Communication Engg.</span>
+                            <!-- <h3></h3> -->
                         </div>
                         <div class="service_content">
-                            <ul>
+                           <!--  <ul>
                                 <li> Borrow - $350 over 3 months </li>
                                 <li> Interest rate - 292% pa fixed</li>
                                 <li>Total amount payable - $525.12</li>
                                 <li>Representative - 1,286% APR</li>
-                            </ul>
+                            </ul> -->
                             <div class="apply_btn">
-                                <button class="boxed-btn3" type="submit">Apply Now</button>
+                                <a href="http://www.mbcpeermade.com/Departments/Electronics-and-Communication-Engineering/4/Department%20Profile/31" target="_blank"><button class="boxed-btn3" type="submit">Apply Now</button></a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+<!-- Second Row -->
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay=".5s">
+                        <div class="service_icon_wrap text-center">
+                            <div class="service_icon ">
+                                <img src="img/svg_icon/engineer.svg" height="80px" alt="">
+                            </div>
+                        </div>
+                        <div class="info text-center">
+                            <span>Civil Engineering</span>
+                            <!-- <h3></h3> -->
+                        </div>
+                        <div class="service_content">
+                            <!-- <ul>
+                                <li> Borrow - $350 over 3 months </li>
+                                <li> Interest rate - 292% pa fixed</li>
+                                <li>Total amount payable - $525.12</li>
+                                <li>Representative - 1,286% APR</li>
+                            </ul> -->
+                            <div class="apply_btn">
+                                <a href="http://www.mbcpeermade.com/Departments/Civil-Engineering/2/Department%20Profile/1" target="_blank"><button class="boxed-btn3" type="submit">Know More</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
+                        <div class="service_icon_wrap text-center">
+                            <div class="service_icon ">
+                                <img src="img/svg_icon/power.svg" height="80px" alt="">
+                            </div>
+                        </div>
+                        <div class="info text-center">
+                            <span>Electrical & Electronics Engg.</span>
+                            <!-- <h3></h3> -->
+                        </div>
+                        <div class="service_content">
+<!--                             <ul>
+                                <li> Borrow - $350 over 3 months </li>
+                                <li> Interest rate - 292% pa fixed</li>
+                                <li>Total amount payable - $525.12</li>
+                                <li>Representative - 1,286% APR</li>
+                            </ul> -->
+                            <div class="apply_btn">
+                                <a href="http://www.mbcpeermade.com/Departments/Electrical-and-Electronics-Engineering/3/Department%20Profile/21" target="_blank"><button class="boxed-btn3" type="submit">Know More</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service wow fadeInRight" data-wow-duration="1.2s" data-wow-delay=".5s">
+                        <div class="service_icon_wrap text-center">
+                            <div class="service_icon ">
+                                <img src="img/svg_icon/formula.svg" height="80px" alt="">
+                            </div>
+                        </div>
+                        <div class="info text-center">
+                            <span>Science & Humanities</span>
+                            <!-- <h3></h3> -->
+                        </div>
+                        <div class="service_content">
+                            <!-- <ul>
+                                <li> Borrow - $350 over 3 months </li>
+                                <li> Interest rate - 292% pa fixed</li>
+                                <li>Total amount payable - $525.12</li>
+                                <li>Representative - 1,286% APR</li>
+                            </ul> -->
+                            <div class="apply_btn">
+                                <a href="http://www.mbcpeermade.com/Departments/Science-and-Humanities/6/Department%20Profile/41" target="_blank"><button class="boxed-btn3" type="submit">Know More</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+<!-- Second Row ENDS here -->
         </div>
     </div>
     <!-- service_area_end  -->
@@ -268,17 +344,17 @@
                         <div class="section_title wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".3s">
                             <h3>Why Choose Us?</h3>
                         </div>
-                        <p class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".4s">Esteem spirit temper too say adieus who direct esteem.It esteems luckily or picture placing drawing. Apartments frequently or motionless on reasonable.</p>
+                        <p class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".4s">Mar Baselios Christian College of Engineering & Technology, Kuttikkanam, Peermade, is a self-financing institution for professional Education, affiliated to APJ Abdul Kalam Technological University. The College has continued its advancement as a centre for learning and public service coupled with excellent university exam results, high profile campus placements.</p>
                         <div class="about_list">
                             <ul>
-                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">Loans with quick approval.</li>
-                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">Customize a loan based on the amount.</li>
-                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".7s">Good credit profile and you have built your loan.</li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".8s">
-                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".9s">We provide online instant cash loans.</li>
+                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">Easy admission process</li>
+                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".6s">Experienced faculties with high profile</li>
+                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".7s">Hostel facility to reside and study</li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".8s">
+                                <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".9s">Pleasant climate</li>
                             </ul>
                         </div>
                         <div class="about_btn wow fadeInRight" data-wow-duration="1.3s" data-wow-delay=".5s">
-                            <a class="boxed-btn3" href="apply.html">About Us</a>
+                            <a class="boxed-btn3" href="http://www.mbcpeermade.com/About-Us/Profile" target="_blank">About Us</a>
                         </div>
                     </div>
                 </div>
@@ -294,7 +370,7 @@
                     <div class="section_title text-center mb-90">
                         <span class="wow lightSpeedIn" data-wow-duration="1s" data-wow-delay=".1s"></span>
                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">How it Works</h3>
-                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">We provide online instant cash loans with quick approval that suit your term</p>
+                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">We conduct scholarship exams every year and provide fee waiver schemes for top ranked students</p>
                     </div>
                 </div>
             </div>
@@ -304,9 +380,8 @@
                         <span>
                             01
                         </span>
-                        <h3>Apply for loan</h3>
-                        <p>We will customize a loan based on the 
-                            amount of cash your company need term</p>
+                        <h3>Apply for scolarship</h3>
+                        <p>We will acknowledge you with your login credentials via email</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -314,9 +389,8 @@
                         <span>
                             02
                         </span>
-                        <h3>Application review</h3>
-                        <p>We will customize a loan based on the 
-                            amount of cash your company need term</p>
+                        <h3>Login with your credentials</h3>
+                        <p>Login with your username and password sent via email</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
@@ -324,9 +398,8 @@
                         <span>
                             03
                         </span>
-                        <h3>Get funding fast</h3>
-                        <p>We will customize a loan based on the 
-                            amount of cash your company need term</p>
+                        <h3>Start attending the exam</h3>
+                        <p>Start your online scholarship exam and complete it within the given time frame. You are done</p>
                     </div>
                 </div>
             </div>
