--- a/index.html
+++ b/index.html
@@ -28,24 +28,15 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" href="css/responsive.css"> -->
     <style type="text/css">
-        .title-MBC{
-            color: blue;
-            font-style: italic;
-            font-weight: bold;
-            font-size: 60px;
-        }
-        .title-B{
-            color: orange;
-            font-style: italic;
-            font-weight: bold;
-            font-size: 60px;
-        }
-        .title-logo{
-            margin-top: 30px;
+        .logo{
+            margin: 10px;
         }
         .login-form-legend{
             font-size: 12px;
             color: gray;
+        }
+        .col-xl-2 .col-md-6 .col-lg-3{
+            max-width: 60%;
         }
     </style>
 </head>
@@ -65,34 +56,13 @@
                             <div class="col-xl-3 col-lg-2">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <!-- <img src="https://upload.wikimedia.org/wikipedia/en/0/01/Mar_Baselios_Christian_College_Logo.png" height="60px" alt=""> -->
-                                        <div class="title-logo"><p class="title-MBC">M<span class="title-B">B</span>C<span style="font-size: 40px; color: white">Scholarship</span></p></div>
+                                        <img class="logo" height="60px" src="img/logo/mbc-logo-expanded.png">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-7">
                                 <div class="main-menu  d-none d-lg-block">
-                                    <nav>
-                                        <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>
-                                            <li><a href="Loan.html">Loan</a></li>
-                                            <li><a href="about.html">about</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="apply.html">apply loan</a></li>
-                                                    <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="FAQ.html">FAQ</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                        </ul>
-                                    </nav>
+                                    
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
@@ -336,7 +306,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
                     <div class="about_img wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">
-                        <img src="img/about/about.png" alt="">
+                        <img src="img/about/why-choose-us.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -411,20 +381,19 @@
             <div class="row justify-content-end">
                 <div class="col-lg-6">
                     <div class="faq_ask pl-68">
-                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Frequently ask</h3>
+                        <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".3s">Frequently asked questions</h3>
                             <div id="accordion">
                                 <div class="card wow fadeInUp" data-wow-duration="1.1s" data-wow-delay=".3s">
                                     <div class="card-header" id="headingOnee">
                                       <h5 class="mb-0">
-                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOnee" aria-expanded="true" aria-controls="collapseOnee">
-                                            Adieus who direct esteem It esteems luckily?
+                                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOnee" aria-expanded="true" aria-controls="collapseOnee">Why MBC Scholarship?
                                         </button>
                                       </h5>
                                     </div>
                                 
                                     <div id="collapseOnee" class="collapse show" aria-labelledby="headingOnee" data-parent="#accordion">
                                       <div class="card-body">
-                                        Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
+                                        Attractive Scholarship Schemes  are available for Students based on their performance in the MBC Scholarship Exam 2020, for B Tech Admission, provided by the Malankara Orthodox Syrian Church
                                       </div>
                                     </div>
                                   </div>
@@ -432,12 +401,12 @@
                                         <div class="card-header" id="headingOne">
                                             <h5 class="mb-0">
                                                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                                    Who direct esteem It esteems?
+                                                    What are the popular schemes?
                                                 </button>
                                             </h5>
                                         </div>
                                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion" style="">
-                                            <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
+                                            <div class="card-body">Students who secure ranks within 15000 in KEAM have to pay the Tuition Fee of Rs 4,000/- per semester for B Tech Admission, provided by the Malankara Orthodox Syrian Church. Students who secured Full A+ in Plus Two have to pay the Tuition Fee of Rs 4,000/- per semester for B Tech Admission, provided by the Malankara Orthodox Syrian Church.
                                             </div>
                                         </div>
                                     </div>
@@ -445,16 +414,16 @@
                                         <div class="card-header" id="headingThree">
                                             <h5 class="mb-0">
                                                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                    Duis consectetur feugiat auctor?
+                                                    Where can I apply for an admission?
                                                 </button>
                                             </h5>
                                         </div>
                                         <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion" style="">
-                                            <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
+                                            <div class="card-body">You can apply for an admission through our official website. Click <a href="http://mbcpeermade.com/Admissions/B-Tech/1" target="_blank">here</a> to apply now
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="card wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".6s">
+                                    <!-- <div class="card wow fadeInUp" data-wow-duration="1.4s" data-wow-delay=".6s">
                                         <div class="card-header" id="headingThree4">
                                             <h5 class="mb-0">
                                                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree4" aria-expanded="false" aria-controls="collapseThree4">
@@ -466,7 +435,7 @@
                                             <div class="card-body">Esteem spirit temper too say adieus who direct esteem esteems luckily or picture placing drawing.
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                     </div>
                 </div>
@@ -475,7 +444,7 @@
     </div>
 
     <!-- testimonial_area  -->
-    <div class="testimonial_area  ">
+    <!-- <div class="testimonial_area  ">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -538,7 +507,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- /testimonial_area  -->
 
     <div class="brad_area">
@@ -547,19 +516,19 @@
                 <div class="col-lg-12">
                     <div class="brad_active owl-carousel">
                         <div class="single_brand wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
-                            <img src="img/brand/1.png" alt="">
+                            <h1 style="color: gray">ME</h1>
                         </div>
                         <div class="single_brand wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
-                            <img src="img/brand/2.png" alt="">
+                            <h1 style="color: gray">CSE</h1>
                         </div>
                         <div class="single_brand wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
-                            <img src="img/brand/3.png" alt="">
+                            <h1 style="color: gray">EEE</h1>
                         </div>
                         <div class="single_brand wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                            <img src="img/brand/4.png" alt="">
+                            <h1 style="color: gray">CE</h1>
                         </div>
                         <div class="single_brand wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                            <img src="img/brand/5.png" alt="">
+                            <h1 style="color: gray">ECE</h1>
                         </div>
                     </div>
                 </div>
@@ -572,13 +541,12 @@
             <div class="row align-items-center">
                 <div class="col-lg-8 col-md-7">
                     <div class="loan_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">
-                        <h3>Apply for a Loan for your startup, 
-                            education or company</h3>
+                        <h3>Start your online test now</h3>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-5">
                     <div class="loan_btn wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".4s">
-                        <a class="boxed-btn3" href="apply.html">Apply Now</a>
+                        <a class="boxed-btn3" href="#sticky-header">Start Now</a>
                     </div>
                 </div>
             </div>
@@ -594,34 +562,34 @@
                         <div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img src="img/footer_logo.png" alt="">
+                                    <img src="https://upload.wikimedia.org/wikipedia/en/0/01/Mar_Baselios_Christian_College_Logo.png" height="80px" alt="">
                                 </a>
                             </div>
                             <p>
-                                finloan@support.com <br>
-                                +10 873 672 6782 <br>
-                                600/D, Green road, NewYork
+                                mbc@mbcpeermade.com <br>
+                                +91 75599 33571 <br>
+                                Peermade, Idukki
                             </p>
                             <div class="socail_links">
                                 <ul>
                                     <li>
-                                        <a href="#">
+                                        <a href="https://www.facebook.com/mbckuttikanam/">
                                             <i class="ti-facebook"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
-                                            <i class="fa fa-google-plus"></i>
+                                        <a href="http://mbcpeermade.com">
+                                            <i class="fa fa-globe"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
-                                            <i class="fa fa-twitter"></i>
+                                        <a href="https://www.linkedin.com/school/mbccet/about/">
+                                            <i class="fa fa-linkedin"></i>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
-                                            <i class="fa fa-instagram"></i>
+                                        <a href="https://www.youtube.com/user/mbccet">
+                                            <i class="fa fa-youtube"></i>
                                         </a>
                                     </li>
                                 </ul>
@@ -632,18 +600,19 @@
                     <div class="col-xl-2 col-md-6 col-lg-3">
                         <div class="footer_widget wow fadeInUp" data-wow-duration="1.1s" data-wow-delay=".4s">
                             <h3 class="footer_title">
-                                Services
+                                Courses Offered
                             </h3>
-                            <ul>
-                                <li><a href="#">SEO/SEM </a></li>
-                                <li><a href="#">Web design </a></li>
-                                <li><a href="#">Ecommerce</a></li>
-                                <li><a href="#">Digital marketing</a></li>
+                            <ul style="width: 160%">
+                                <li><a href="#">Computer Science & Engg.</a></li>
+                                <li><a href="#">Mechanical Engg.</a></li>
+                                <li><a href="#">Civil Engineering</a></li>
+                                <li><a href="#">Electronics & Communication Engg.</a></li>
+                                <li><a href="#">Electrical & Electronics Engg.</a></li>
                             </ul>
 
                         </div>
                     </div>
-                    <div class="col-xl-2 col-md-6 col-lg-2">
+                    <!-- <div class="col-xl-2 col-md-6 col-lg-2" style="margin-left: 270px">
                         <div class="footer_widget wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".5s">
                             <h3 class="footer_title">
                                 Useful Links
@@ -651,12 +620,12 @@
                             <ul>
                                 <li><a href="#">About</a></li>
                                 <li><a href="#">Blog</a></li>
-                                <li><a href="#"> Contact</a></li>
+                                <li><a href="#">Contact</a></li>
                                 <li><a href="#">Support</a></li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-xl-4 col-md-6 col-lg-4">
+                    </div> -->
+                    <!-- <div class="col-xl-4 col-md-6 col-lg-4">
                         <div class="footer_widget wow fadeInUp" data-wow-duration="1.3s" data-wow-delay=".6s">
                             <h3 class="footer_title">
                                 Subscribe
@@ -668,7 +637,7 @@
                             <p class="newsletter_text">Esteem spirit temper too say adieus who direct esteem esteems
                                 luckily.</p>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
