--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
             margin: 10px;
         }
         .login-form-legend{
-            font-size: 12px;
+            font-size: 15px;
             color: gray;
         }
         .col-xl-2 .col-md-6 .col-lg-3{
             max-width: 60%;
+        }
+        .wide{
+            width: 100%;
         }
     </style>
 </head>
