--- a/q-exam/question.html
+++ b/q-exam/question.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css?v=1">
     <title>Document</title>
 </head>
 <body>
@@ -23,12 +22,13 @@
             <div class="line-next"></div>
             <div class="topic">GK</div>
         </div>
-        <div class="question-list">
+        <div class="question-list" id="question-list">
             
         </div>
         <div class="question-container">
-            <div class="question" id="question_target">
-                Q. Choose the correct answer
+            <div class="question" id="question-target">
+                Q. Question Here?
+                <div id="get"></div>
             </div>
             <div class="option-container">
                 <div id="option_target">
@@ -52,8 +52,15 @@
             </div>
         </div>
         <div id="submit">
-            <input type="submit" value="Go" onclick="findAns()">
+            <input type="submit" value="Submit" onclick="findAns()">
         </div>
     </div>
 </body>
 </html>
+
+<script id="display" type="text/javascript">
+
+</script>
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.0/jquery.min.js"></script>
+<script src="script.js" defer></script>
