--- a/q-exam/question.html
+++ b/q-exam/question.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1">
 </head>
 <body>
     <div class="q-container">
@@ -16,13 +16,13 @@
                 Click The Button to Start Test
             </div>
             <div class="start-button">
-                <input type="button" value="START">
+                <button><a href="php/question.php">START</a></button>
             </div>
             <div class="rules">
-                Rules and Regulation:
-                ----  
-                ----
-                ----
+                Rules and Regulation: <br>
+                ---- <br>
+                ---- <br>
+                ---- <br>
                 if any
             </div>
         </div>
