--- a/q-upload/q-index.html
+++ b/q-upload/q-index.html
@@ -6,8 +6,18 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="q-style.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <script src="q-script.js?v=3" defer></script>
+        <script src="q-script.js?v=5" defer></script>
         <title>Question Upload</title>
+        <style>
+            .query-class {
+                width: 80%;
+                padding: 20px;
+                border: 2px solid black;
+                border-radius: 20px;
+                font-size: 20px;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <div class="container">
@@ -107,6 +117,9 @@
                         </td>
                     </tr>
                 </table>
+                <div id="query" class="query-class">
+                    
+                </div>
             </div>
 
             <div class="footer"></div>
