Admin panel working

--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1">
 </head>
 <body>
     <div class="container">
@@ -16,6 +16,9 @@
             <div class="dashboard">
                 <div class="add-question" onclick="window.location='../q-upload/q-index.html'">
                     ADD QUESTIONS
+                </div>
+                <div class="edit-question" onclick="window.location='php/editQuestions.php'">
+                    EDIT QUESTIONS
                 </div>
                 <div class="student-result" onclick="window.location='php/student-result.php'">
                     STUDENT RESULTS
