--- a/s-exam/index.html
+++ b/s-exam/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css?v=1">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="q-container">
@@ -12,19 +13,16 @@
             Welcome to MBC Scholarship Exam
         </div>
         <div class="start-field">
-            <div class="start-test">
-                Click The Button to Start Test
+            <div class="rules">
+                Rules and Regulations:<br><br>
+                1. Rule 2<br>
+                2. Rule 2<br>
+                3. Rule 3<br>
             </div>
             <div class="start-button">
                 <button><a href="php/question.php">START</a></button>
             </div>
-            <div class="rules">
-                Rules and Regulation: <br>
-                ---- <br>
-                ---- <br>
-                ---- <br>
-                if any
-            </div>
+            
         </div>
     </div>
 </body>
