--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="style.css?v=1">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img src="http://mbcpeermade.com/userfiles/poster/59a7487994344d69931e69e79fd9abbc.jpg">
     <div class="container">
         <div class="header">
             <div class="mbc-logo"></div>
@@ -15,13 +17,13 @@
         <div class="body-container">
             <div class="dashboard">
                 <div class="add-question" onclick="window.location='../q-upload/q-index.html'">
-                    ADD QUESTIONS
+                    Add Questions
                 </div>
                 <div class="edit-question" onclick="window.location='php/editQuestions.php'">
-                    EDIT QUESTIONS
+                    Edit Questions
                 </div>
                 <div class="student-result" onclick="window.location='php/student-result.php'">
-                    STUDENT RESULTS
+                    Student Results
                 </div>
             </div>
         </div>
