--- a/s-exam/index.html
+++ b/s-exam/index.html
@@ -10,14 +10,11 @@
 <body>
     <div class="q-container">
         <div class=q-head>
-            Welcome to MBC Scholarship Exam
+           MBC Scholarship Exam
         </div>
         <div class="start-field">
             <div class="rules">
-                Rules and Regulations:<br><br>
-                1. Rule 2<br>
-                2. Rule 2<br>
-                3. Rule 3<br>
+              
             </div>
             <div class="start-button">
                 <button><a href="php/question.php">START</a></button>
