Admin panel and sessions

--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Panel</title>
-    <link rel="stylesheet" href="style.css?v=1">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Admin Login</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <img src="http://mbcpeermade.com/userfiles/poster/59a7487994344d69931e69e79fd9abbc.jpg">
-    <div class="container">
-        <div class="header">
-            <div class="mbc-logo"></div>
-            <div class="user"></div>
-        </div>
-        <div class="body-container">
-            <div class="dashboard">
-                <div class="add-question" onclick="window.location='../q-upload/q-index.html'">
-                    Add Questions
+    <div class="body-container">
+        <div class="login-container">
+            <form action="php/login.php" method="post">
+                <div class="username-wrapper">
+                    <label for="user">
+                        Username
+                    </label>
+                    <input type="text" name="user" id="user" required>
                 </div>
-                <div class="edit-question" onclick="window.location='php/editQuestions.php'">
-                    Edit Questions
+                <div class="password-wrapper">
+                    <label for="pass">
+                        Password
+                    </label>
+                    <input type="password" name="pass" id="pass" required>
                 </div>
-                <div class="student-result" onclick="window.location='php/student-result.php'">
-                    Student Results
+                <div class="submit-wrapper">
+                    <input type="submit" value="Login">
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </body>
