--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
     <link rel="stylesheet" href="login.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body-container">
+        <div class=q-head>
+            <img src="../img/logo/mbc-logo-expanded.png" alt="mbc-logo">
+         </div>
         <div class="login-container">
             <form action="php/login.php" method="post">
                 <div class="username-wrapper">
                     <label for="user">
-                        Username
+                        Username :
                     </label>
                     <input type="text" name="user" id="user" required>
                 </div>
                 <div class="password-wrapper">
                     <label for="pass">
-                        Password
+                        Password : 
                     </label>
                     <input type="password" name="pass" id="pass" required>
                 </div>
