--- a/s-exam/index.html
+++ b/s-exam/index.html
@@ -8,13 +8,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script>
+        var adminxhr = new XMLHttpRequest();
+        xhr.open('GET', '../admin-panel/php/adminSession.php', true);
+        xhr.onreadystatechange = function() {
+            if(xhr.readyState == 4 && xhr.status == 200) {
+                if(xhr.responseText == "0") {
+                    window.location = "../admin-panel/";
+                }
+            }
+        }
+        xhr.send();
+    </script>
     <div class="q-container">
         <div class=q-head>
-           MBC Scholarship Exam
+           <img src="../img/logo/mbc-logo-expanded.png" alt="mbc-logo">
         </div>
         <div class="start-field">
             <div class="rules">
-              
+              <b style="font-size: 20px;">Please note the following: </b><br>
+              <div class="rules">
+                <ul>
+                    <li>Please do not reload the page after Start Button is pressed</li>
+                    <li>Any problem during the exam, consider taking a screenshot and report to the college administrator</li>
+                </ul>
+              </div>
             </div>
             <div class="start-button">
                 <button><a href="php/question.php">START</a></button>
