--- a/q-upload/q-index.html
+++ b/q-upload/q-index.html
@@ -4,42 +4,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="q-style.css">
+        <link rel="stylesheet" href="q-style.css?v=2">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <script src="q-script.js?v=5" defer></script>
         <title>Question Upload</title>
-        <style>
-            .query-class {
-                width: 80%;
-                padding: 20px;
-                border: 2px solid black;
-                border-radius: 20px;
-                font-size: 20px;
-                text-align: center;
-            }
-        </style>
     </head>
     <body>
         <script>
+            var user;
             var adminxhr = new XMLHttpRequest();
-            xhr.open('GET', '../admin-panel/php/adminSession.php', true);
-            xhr.onreadystatechange = function() {
-                if(xhr.readyState == 4 && xhr.status == 200) {
-                    if(xhr.responseText == "0") {
+            adminxhr.open('GET', '../admin-panel/php/adminSession.php', true);
+            adminxhr.onreadystatechange = function() {
+                if(adminxhr.readyState == 4 && adminxhr.status == 200) {
+                    var obj = JSON.parse(adminxhr.responseText);
+                    if(obj[0] == "0") {
                         window.location = "../admin-panel/";
                     }
+                    user = obj[1];
+                    console.log(user);
                 }
             }
-            xhr.send();
+            adminxhr.send();
         </script>
         <div class="container">
             <div class="header">
                 <div id="left-div">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/0/01/Mar_Baselios_Christian_College_Logo.png" alt="mbc-logo">
-                    <div style="padding-left: 20px;">Mar Baselios Christian College of Engg. & Technology</div>
+                    <img src="../img/logo/mbc-logo-expanded.png" alt="mbc-logo">
                 </div>
                 <div id="right-div">
-                    <i class="material-icons" style="font-size:36px">person</i>User
+                    <i class="material-icons" style="font-size:36px">person</i>
+                    <span id='user-name'> </span>
                 </div>
             </div>
 
@@ -129,12 +123,14 @@
                         </td>
                     </tr>
                 </table>
-                <div id="query" class="query-class">
-                    
-                </div>
             </div>
-
-            <div class="footer"></div>
+            <div id="query" class="query-class">Status of the question when added to DB will be shown here</div>
         </div>
     </body>
 </html>
+
+<script>
+    window.onload = function () {
+        document.getElementById('user-name').innerHTML = user;
+    }
+</script>
