register for exam added

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <p>Can't login? Click <a href="">here</a></p>
+                                <p>To Register for the Exam, Click <a href="register/index.html">here</a></p>
                                 <div class="submit_btn">
                                     <button class="boxed-btn3" type="submit">Login</button>
                                 </div>
