styles are independent for each page

--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="css/login-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body-container">
         <div class=q-head>
             <img src="../img/logo/mbc-logo-expanded.png" alt="mbc-logo">
-         </div>
+        </div>
         <div class="login-container">
             <form action="php/login.php" method="post">
                 <div class="username-wrapper">
